fix: reduce h1 size on smaller screens

--- a/pages/assets/css/basic.css
+++ b/pages/assets/css/basic.css
@@ -478,6 +478,9 @@ input[type="radio"]:checked {
     right: 0;
 }
 @media (max-width: 768px) {
+    h1 {
+        font-size: 4rem;
+    }
     .h2 {
         font-size: 2.5rem;
     }
